[package]
name = "wasm-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

[dependencies]
vdrm-alg = {path = "../vdrm-alg"}
plotters = "^0.3.2"
wasm-bindgen = "0.2.78"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.39", features = ["HtmlCanvasElement"] }
plotters-canvas = "^0.3.0"
geo = "0.28"
lazy_static = "1.4"
glam = "0.27.0"
log = "0.4.25"
wasm-logger = "0.2.0"

[profile.release]
lto = true
